security.tf
resource "aws_security_group" "main" {
  name   = "${var.env}-security-group"
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.env}-security-group"
  }
}

resource "aws_vpc_security_group_ingress_rule" "allow_ssh" {
  security_group_id = aws_security_group.main.id
  description       = "Allow SSH inbound traffic"
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "tcp"
  from_port         = 22
  to_port           = 22
}

resource "aws_vpc_security_group_egress_rule" "all_egress" {
  security_group_id = aws_security_group.main.id
  description       = "Allow all egress"
  from_port         = -1
  to_port           = -1
  ip_protocol       = "-1"
  cidr_ipv4         = "0.0.0.0/0"
}
